update personal info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
+    This is the personal website of Jinggui Liang.
+  <!-- My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
   My recent work has focused on reducing political polarization online 
   [<a href="assets/publications/2022_newsbridge/paper.pdf" target="_blank">ICWSM'22a</a>,
   <a href="assets/publications/2022_flipfeed/paper.pdf" target="_blank">ICWSM'22b</a>,
@@ -18,20 +19,21 @@ title: Home
   and causal inference in social systems 
   [<a href="assets/publications/2017_detecting_network_effects/paper.pdf" target="_blank">KDD'17</a>
   <a href="assets/publications/2019_biometrika/paper.pdf" target="_blank">Biometrika'19</a>]. 
-  My research often falls at the intersections of Social Networks, Machine Learning, and Causal Inference.
+  My research often falls at the intersections of Social Networks, Machine Learning, and Causal Inference. -->
   </p>
 
   <p>
-  I'm an Assistant Professor in the Information School at the University of Washington.
+    This is a personal website.
+  <!-- I'm an Assistant Professor in the Information School at the University of Washington.
   Before joining UW, I was a Postdoc at Stanford University, mentored by <a href="https://web.stanford.edu/~jugander/" target="_blank">Johan Ugander</a>.
   I received my Ph.D. from MIT in 2020 under the supervision of Deb Roy. 
   Prior to coming to MIT, I spent one year in Paris and one year in Barcelona doing a M.Sc. in Data mining and Knowledge Management. 
   I got my B.Sc. from Staffordshire University with First Class honors in Computer Science. 
-  Throughout my graduate studies, I spent several summers doing internships in industry, including Yahoo! Labs, Amazon, LinkedIn, and Facebook.
+  Throughout my graduate studies, I spent several summers doing internships in industry, including Yahoo! Labs, Amazon, LinkedIn, and Facebook. -->
   </p> 
 </div>
 
-<div class="docs-section" id="prospective-students">  
+<!-- <div class="docs-section" id="prospective-students">  
   <h4>Prospective Students</h4>
   <p>
   <b>I'm recruiting PhD students to start Fall 2024 at the University of Washington! </b> 
@@ -43,7 +45,7 @@ title: Home
   <br/>
   If you have any questions, feel free to reach out.
   </p> 
-</div>
+</div> -->
 
 
 <!-- ========== PUBLICATIONS ========== -->
