--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="bio">
   <h4>Biography</h4>
   <p>
-    This is the personal website of Jinggui Liang.
+    I am a Ph.D. candidate at Singapore Management University, supervised by Prof. <a href="https://liziliao.github.io/" target="_blank">LIAO Lizi</a>.
   <!-- My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
   My recent work has focused on reducing political polarization online 
   [<a href="assets/publications/2022_newsbridge/paper.pdf" target="_blank">ICWSM'22a</a>,
