update bio for bachelor and master

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Home
   <h4>Biography</h4>
   <p>
     I am a Ph.D. candidate at Singapore Management University, supervised by Prof. <a href="https://liziliao.github.io/" target="_blank">LIAO Lizi</a>.
+    Previously, I obtained both of my Bachelor and Master degrees from PRIS lab at Beijing University of Posts and Telecommunications (BUPT) in 2019 and 2022 respectively, advised by Prof. <a href="https://www.semanticscholar.org/author/Si-Li/2118153856" target="_blank">LI Si</a>.
   <!-- My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
   My recent work has focused on reducing political polarization online 
   [<a href="assets/publications/2022_newsbridge/paper.pdf" target="_blank">ICWSM'22a</a>,
