update research interests

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Home
   </p>
 
   <p>
-    This is a personal website.
+    My research interests lie in open-world conversational understanding and the safety of large language models.
   <!-- I'm an Assistant Professor in the Information School at the University of Washington.
   Before joining UW, I was a Postdoc at Stanford University, mentored by <a href="https://web.stanford.edu/~jugander/" target="_blank">Johan Ugander</a>.
   I received my Ph.D. from MIT in 2020 under the supervision of Deb Roy. 
